--- a/src/main/webapp/public/cadastroUsuario/cadastroUsuario.xhtml
+++ b/src/main/webapp/public/cadastroUsuario/cadastroUsuario.xhtml
@@ -30,12 +30,12 @@
 					</div>
 			<div class="form-group">
 				<h:outputLabel for="inputSenha" value="Senha:" />
-				<p:inputText id="inputSenha" placeholder="Insira Sua Senha" value="#{usuarioBean.senha}" 
+				<p:password id="inputSenha" placeholder="Insira Sua Senha" value="#{usuarioBean.senha}" 
 					maxlength="50" required="true" requiredMessage="Campo Senha obrigatório."/>
 			</div>
 			<div class="form-group">
 				<h:outputLabel for="inputConfirmaSenha" value="Confirmação de senha:" />
-				<p:inputText id="inputConfirmaSenha" placeholder="Confirme Sua Senha" value="#{usuarioBean.confirmaSenha}" 
+				<p:password id="inputConfirmaSenha" placeholder="Confirme Sua Senha" value="#{usuarioBean.confirmaSenha}" 
 						maxlength="50" required="true" requiredMessage="Campo Confirmação de Senha obrigatório."/>			
 			</div>
 			
